# seatunnel

./: .asf.yaml  .dlc.json  .gitignore  README.md  plugin-mapping.properties  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yml  build_main.yml  notify_test_workflow.yml  schedule_backend.yml  update_build_status.yml
.skills/: README.md  README.zh-CN.md
.skills/seatunnel-pr-submit/: SKILL.md
config/: jvm_options  plugin_config  v2.batch.config.template  v2.streaming.conf.template
docs/: sidebars.js
docs/en/: faq.md
docs/zh/: faq.md
seatunnel-cli/: LICENSE  NOTICE  README.md  README.zh-CN.md  env.example.sh  pyproject.toml  setup.sh
seatunnel-cli/licenses/: LICENSE-anthropic.txt  LICENSE-prompt-toolkit.txt  LICENSE-rich.txt
seatunnel-cli/seatunnel_cli/: __init__.py  agents.py  cli.py  connectors.py  llm_provider.py  memory.py  skills.py
seatunnel-cli/seatunnel_cli/golden_examples/: fake_source_console.md  jdbc_console.md  kafka_clickhouse.md  mysql_cdc_starrocks.md
seatunnel-cli/seatunnel_cli/skills/: batch_sync.md  cdc_realtime.md  cross_database.md  data_quality.md  file_etl.md  multi_pipeline.md  transform_chain.md
seatunnel-cli/tests/: test_connector_metadata.py  test_llm_provider_openai.py
seatunnel-connectors-v2/: pom.xml
seatunnel-connectors-v2/connector-bigquery/: pom.xml
seatunnel-connectors-v2/connector-cdc/: pom.xml
seatunnel-connectors-v2/connector-edge-socket/: pom.xml
seatunnel-connectors-v2/connector-fluss/: pom.xml
seatunnel-connectors-v2/connector-google-bigtable/: pom.xml
seatunnel-connectors-v2/connector-jdbc/: pom.xml
seatunnel-dist/: pom.xml
seatunnel-dist/release-docs/: NOTICE
seatunnel-engine/: README.md
seatunnel-shade/: pom.xml
seatunnel-trace/: pom.xml
seatunnel-transforms-v2/: README.md  README.zh.md  pom.xml
tools/: check_connector_registration.py
(+2715 files in other folders)
