#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seatunnel-cli"
dynamic = ["version"]
description = "SeaTunnel CLI - Generate Apache SeaTunnel configs with natural language"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyhocon>=0.3.60",
]

[project.scripts]
seatunnel = "seatunnel_cli.cli:main"

[project.optional-dependencies]
bedrock = ["boto3>=1.34.0"]
anthropic = ["anthropic>=0.42.0"]
openai = ["openai>=1.0.0"]
all = ["boto3>=1.34.0", "anthropic>=0.42.0", "openai>=1.0.0"]
dev = ["pytest", "black", "ruff", "boto3>=1.34.0", "anthropic>=0.42.0", "openai>=1.0.0"]

[tool.setuptools.packages.find]
include = ["seatunnel_cli*"]

[tool.setuptools.package-data]
seatunnel_cli = ["golden_examples/*.md", "skills/*.md"]

[tool.setuptools.dynamic]
version = {attr = "seatunnel_cli.__version__"}
